# nutmeg-run

./: .editorconfig  CMakeLists.txt  CMakeUserPresets.json  Justfile  conanfile.txt
.github/: copilot-instructions.md
docs/: heap-object-layout.md  return-stack-layout.md  sticky-quotes-proposal.md  tagging-scheme.md
docs/decisions/0000-command-option-syntax/: 0000-command-option-syntax.md
docs/tasks/: 2025-11-28-initial-task.md  2025-11-30-13:00-implement-heap.md  2025-11-30-threaded-interpreter.md  2025-12-20-jumps.md
scripts/: decisions.py
src/: bundle_reader.cpp  bundle_reader.hpp  cell_stack.hpp  function_object.hpp  heap.cpp  heap.hpp  instruction.cpp  instruction.hpp  machine.cpp  machine.hpp  main.cpp  parse_function_object.cpp  parse_function_object.hpp  sys_maths.cpp  sys_maths.hpp  sys_multiply.cpp  sys_multiply.hpp  sys_println.cpp  sys_println.hpp  sysfunctions.cpp  sysfunctions.hpp  sysprintln.cpp  sysprintln.hpp  trace.hpp  value.cpp  value.hpp
test-data/: callhello.bundle  hellomsg.bundle  helloworld.bundle
tests/: test_bundle_reader.cpp  test_machine.cpp  test_threaded.cpp
